# Coursework_integration_with_external_service

./: .gitignore  README.md  pyproject.toml
data/: vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_abstract_classes_py.html  z_145eef247bfb46b6_api_py.html  z_145eef247bfb46b6_saver_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_abstract_classes_py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_saver_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_vacancy_py.html
src/: abstract_classes.py  api.py  main.py  saver.py  utils.py  vacancy.py
src/data/: vacancies.json
tests/: test_abstract_classes.py  test_api.py  test_saver.py  test_utils.py  test_vacancy.py
